fix(CellGroup): resolved border color error in dark mode

--- a/src/cell-group/cell-group.less
+++ b/src/cell-group/cell-group.less
@@ -6,7 +6,7 @@
 @cell-group-title-padding-left: var(--td-cell-group-title-padding-left, 32rpx);
 @cell-group-title-bg-color: var(--td-cell-group-title-bg-color, @bg-color-secondarycontainer);
 @cell-group-title-color: var(--td-cell-group-title-color, @text-color-placeholder);
-@cell-group-border-color: var(--td-cell-group-border-color, @border-color);
+@cell-group-border-color: var(--td-cell-group-border-color, @component-stroke);
 
 .@{prefix}-cell-group {
   position: relative;
